<resources>
    <string name="app_name">Attendance</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="log_in_as_a_professor">Log in as a professor</string>
    <string name="log_in_as_a_student">Log in as a student</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="first_name_hint">First name</string>
    <string name="second_name_hint">Second name</string>
    <string name="log_in">Log in</string>
    <string name="name_should_not_be_empty">Name should not be empty!</string>
    <string name="preference_file_key" translatable="false">com.vystotsky.name</string>
    <string name="saved_first_name" translatable="false">first_name</string>
    <string name="saved_second_name" translatable="false">second_name</string>
    <string name="check_string">Check</string>
    <string name="professor_log_in">Enter your email and password</string>
    <string name="email_hint">email</string>
    <string name="email_error_text">Please, enter valid email address</string>
    <string name="saved_email" translatable="false">email</string>
    <string name="access_token" translatable="false">token</string>
<!--    <string name="camera_permissions_error">Camera permission is not granted by the user!</string>-->
    <string name="location_permissions_error">Location permission is not granted by the user!</string>
    <string name="start_session">start session</string>
    <string name="logout_menu">log out</string>
    <string name="can_t_create_session">Error</string>
    <string name="attendees_list">Attendees list:</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="use_geolocation_data">Use geolocation data</string>

    <!--no data location string in -->
    <string name="no_location_data"><u>No location data</u></string>
    <string name="location_out_of_range"><u>Further than 100 meters away</u></string>
    <string name="stop_session">Stop session</string>
    <string name="send_email">send email</string>

    <string name="network_error">Network error</string>
    <string name="subject_name">subject name</string>
    <string name="title_home">Home</string>
    <string name="sign_up">sign up</string>
    <string name="password_hint">password</string>
    <string name="your_classes">Your classes:</string>
    <string name="updating">Updating…</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="double_back">Please click BACK again to exit</string>
    <string name="start_advertising">become visible</string>
    <string name="stop_advertising">stop being visible</string>

    <string name="empty_subject_name_error">Please, fill in the subject name!</string>
    <string name="go_to_existing_session">go to existing session</string>
    <string name="start_session_offline">start session (offline)</string>
    <string name="enter_student_s_name">Enter student\'s name</string>
    <string name="student_name_error">first name and second name fields must not be empty!</string>
    <string name="display_qr_code">Display QR Code</string>
    <string name="proximity_name">WIFI</string>
    <string name="camera">Camera</string>
    <string name="attendees_list_menu">Attendees list</string>
    <string name="scan_qr_code_menu">Scan QR Code</string>
    <string name="session_has_been_terminated">Session %1$s has been terminated!</string>
    <string name="retry">Retry</string>
    <string name="discard">Discard</string>
    <string name="attendees_number">Number of students in current class: %1$d</string>
    <string name="start_discovering">start discovering</string>
    <string name="accounted">Accounted!</string>
    <string name="you_have_already_been_scanned">You have already been registered!</string>
    <string name="error_occurred_try_again">Error occurred, try again</string>
    <string name="searching_for_qr_code">Searching for QR code</string>
    <string name="sending">Sending…</string>
    <string name="sent">Sent.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="students">Students</string>
    <string name="this_phone_has_already_been_scanned">This phone has already been scanned!</string>
    <string name="qr_code_doesn_t_look_like_student_s_name">QR Code doesn\'t look like student\'s name</string>
    <string name="student_name_sent">student name sent</string>
    <string name="wrong_token">wrong token!</string>
    <string name="student_accounted">Student accounted</string>
    <string name="nothing"> </string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enable_gps">Please, enable gps!</string>
    <string name="register_question">Non existent email! Do you want to register with this email?</string>
    <string name="session_has_been_saved_locally">Session has been saved locally</string>
    <string name="you_can_t_open_a_clone_of_the_app">You can\'t open a clone of the app!</string>
    <string name="wrong_password">wrong password</string>
    <string name="no_permissions">Cannot make connection because permissions are not granted!</string>
    <string name="can_t_get_token">can\'t get token</string>
    <string name="add">Add</string>

</resources>