<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/student_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_display_qr_code"
            android:icon="@drawable/ic_scan"
            android:title="@string/display_qr_code" />
        <item
            android:id="@+id/nav_wifi_student"
            android:icon="@drawable/ic_wifi"
            android:title="@string/proximity_name" />
        <item
            android:id="@+id/nav_student_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
    </group>

</menu>